# modern_qwave

./: 2DjadaOpts-tbbs.txt  CMakeLists.txt  README.md  jadaOpts-tbbs.txt
qwaves.xcworkspace/xcuserdata/moritzhof.xcuserdatad/: UserInterfaceState.xcuserstate
src/: 1D_problem_DV_hp.cpp  2D_problem_DV_hp.cpp  CMakeLists.txt  main  main.cpp  qwv_types.hpp  qwv_util.hpp
src/coord/: coord.hpp
src/cuda/: memory.cu
src/differentials/: roots.hpp
src/differentials/chebyshev/: chebyshev.hpp
src/differentials/chebyshev/cuda/: chebyshev.cu
src/differentials/chebyshev/parallel/: chebyshev.hpp
src/differentials/fourier/: fourier.hpp
src/differentials/fourier/parallel/: fourier.hpp
src/eigensolver/: eigensolver.hpp
src/matrix/: matrix.hpp  matrix_map.hpp
src/operations/: dgemm.hpp
src/operations/cuda/: dgemm.cu
src/operators/: operator_base.hpp  operator_kronecker.hpp  operator_tensor.hpp
src/operators/cuda/: operator_kronecker.cu  operator_tensor.cu
src/phist/: phist_interface.hpp
src/potentials/: roots.hpp
src/potentials/chebyshev/: chebymatrix.cpp  chebyshev.hpp
src/potentials/chebyshev/parallel/: chebyshev.hpp
src/potentials/gaussian/: gaussian.hpp
src/potentials/gaussian/cuda/: gaussian.cu
src/preconditioner/: sylvester.hpp
test/: file_reader.hpp  test  tests.cpp
test/input_files/: chebyshev1D.txt  chebyshev1DTB.txt  chebyshev1DTB_100.txt  chebyshev1DTB_25.txt  chebyshev1D_100.txt  chebyshev1D_25.txt  chebyshev2D.txt  chebyshev2DTB.txt  chebyshev2DTB_100.txt  chebyshev2DTB_25.txt  chebyshev2D_100.txt  chebyshev2D_25.txt
